--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,26 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.17",
+    "axios": "^1.8.4",
+    "copy-to-clipboard": "^3.3.3",
+    "lucide-react": "^0.487.0",
+    "nodemailer": "^6.10.0",
+    "otp-generator": "^4.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-otp-input": "^3.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
+    "react-type-animation": "^3.2.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.17",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
