--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.3.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/vite": "^4.0.17",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "axios": "^1.8.4",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.8",
+    "cloudinary": "^2.6.0",
+    "clsx": "^2.1.1",
+    "concurrently": "^9.1.2",
+    "cookie-parser": "^1.4.7",
     "copy-to-clipboard": "^3.3.3",
+    "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.1",
+    "crypto-random-string": "^5.0.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-fileupload": "^1.5.1",
+    "framer-motion": "^12.6.5",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
+    "mini-svg-data-uri": "^1.4.4",
+    "mongoose": "^8.13.2",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.10.0",
+    "nodemon": "^3.1.9",
     "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
