--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,12 +43,18 @@
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.6",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-otp-input": "^3.1.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.1",
     "react-type-animation": "^3.2.0",
+    "redux": "^5.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0",
