--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,55 +11,62 @@
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.3.0",
-    "@reduxjs/toolkit": "^2.6.1",
+    "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.31.0",
-    "@tailwindcss/vite": "^4.0.17",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "axios": "^1.8.4",
+    "@tailwindcss/vite": "^4.1.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^3.0.2",
+    "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.8",
-    "cloudinary": "^2.6.0",
+    "cloudinary": "^2.5.0",
     "clsx": "^2.1.1",
-    "concurrently": "^9.1.2",
-    "cookie-parser": "^1.4.7",
+    "concurrently": "^8.2.2",
+    "cookie-parser": "^1.4.6",
     "copy-to-clipboard": "^3.3.3",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.1",
     "crypto-random-string": "^5.0.0",
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.0",
     "express-fileupload": "^1.5.1",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.4.10",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.477.0",
     "mini-svg-data-uri": "^1.4.4",
-    "mongoose": "^8.13.2",
+    "mongoose": "^8.7.0",
     "node-schedule": "^2.1.1",
-    "nodemailer": "^6.10.0",
-    "nodemon": "^3.1.9",
+    "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.6",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
-    "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.55.0",
-    "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
+    "react-dom": "^18.3.1",
+    "react-dropzone": "^14.2.9",
+    "react-hook-form": "^7.53.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "react-otp-input": "^3.1.1",
     "react-rating-stars-component": "^2.2.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "react-super-responsive-table": "^6.0.0",
+    "react-table": "^7.8.0",
     "react-type-animation": "^3.2.0",
     "redux": "^5.0.1",
+    "simplex-noise": "^4.0.3",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.0.17",
-    "web-vitals": "^4.2.4",
+    "swiper": "^11.2.5",
+    "tailwind-merge": "^3.0.2",
+    "video-react": "^0.16.0",
+    "web-vitals": "^2.1.4",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
